# update-apply

./: UpdateApply.md
backend/: .env  main.py  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 1fbecb557442_initial_migration.py  966ca07103d2_add_user_id_foreign_key_to_user_job_.py  d190a24cb9c4_split_user_job_profile_location_into_.py
backend/api/v1/routers/: user_router.py
backend/api/v1/schemas/: user_job_profile_schema.py  user_schema.py
backend/domain/models/: enums.py  job_post.py  user.py  user_job_profile.py
backend/domain/repositories/: base_repository.py  user_profile_repository.py  user_repository.py
backend/domain/services/: personalized_job_search_service.py
backend/infra/database/: __init__.py  engine.py
backend/infra/services/job_postings/: __init__.py  base_job_posting_service.py  techmap_job_posting_service.py
frontend/: FRONTEND_PM_PLAN.md  LANDING_PAGE_DESIGN.md  SPRINT_PLAN.md  THEME_EXECUTION.md  THEME_SPECIFICATION.md
frontend/web/: package.json  pnpm-lock.yaml
frontend/web/app/: globals.css  layout.tsx  page.tsx
frontend/web/app/dashboard/: page.tsx
frontend/web/components/landing/: cta-section.tsx  features.tsx  hero.tsx  how-it-works.tsx  providers.tsx
frontend/web/components/layout/: footer.tsx  header.tsx
frontend/web/components/providers/: github-icon.tsx  google-drive-icon.tsx  notion-icon.tsx
frontend/web/lib/api/: client.ts  jobs.ts  user.ts
